--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -368,8 +368,7 @@ end
 
 def sampling?
   return false unless OPTIONS[:sample]
-
-  env_fetch_first('LTTNG_UST_SAMPLING_MASTER_ONLY', default: '0') == '0' || mpi_local_master?
+  env_fetch_first('LTTNG_UST_SAMPLING_MASTER_ONLY', default: '1') == '0' || mpi_local_master?
 end
 
 def env_tracers
@@ -421,11 +420,16 @@ def env_tracers
   end
 
   # Sample
+  #   Currently the same `so` does the tracing, and the sampling
+  #   This mean that is the local rank is not part of the `traced-ranks`
+  #   No sampling will be performed
   if sampling?
     LOGGER.debug('Sampling Enabled')
     h['LTTNG_UST_SAMPLING'] = 1
     h['LTTNG_UST_SAMPLING_ENERGY'] = 1
-    h['ZES_ENABLE_SYSMAN'] = 1 if OPTIONS[:'backend-names'].include?('ze')
+    # The current only reliable way to use zes api
+    #   is to call zesInit and set ZES_ENABLE_SYSMAN to 0
+    h['ZES_ENABLE_SYSMAN'] = 0 if OPTIONS[:'backend-names'].include?('ze')
   end
 
   backends = [] unless need_backend
