--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -385,10 +385,15 @@ def env_tracers
   end
 
   # Sample
+  #   Currently the same `so` does the tracing, and the sampling
+  #   This mean that is the local rank is not part of the `traced-ranks`
+  #   No sampling will be performed
   if sampling? 
     LOGGER.debug('Sampling Enabled')
     h['LTTNG_UST_SAMPLING'] = 1
     h['LTTNG_UST_SAMPLING_ENERGY'] = 1
+    # The current only reliable way to use zes api
+    #  is to call zesInit and set ZES_ENABLE_SYSMAN to 0
     h['ZES_ENABLE_SYSMAN'] = 0  if OPTIONS[:'backend-names'].include?('ze')
   end
 
