--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -380,7 +380,7 @@ def env_tracers
   h = Hash.new { |h, k| h[k] = [] }
   backends = []
 
-  [%w[opencl cl libOpenCL] + [File.join(LIBDIR,'libTracerOpenCL.so')],
+  [%w[opencl cl libOpenCL] + [File.join(PKGLIBDIR,'opencl','libTracerOpenCL.so')],
    %w[ze ze libze_loader] +  [File.join(PKGLIBDIR,'ze','libze_loader.so')],
    %w[cuda cuda libcuda] +  [File.join(PKGLIBDIR,'cuda','libcuda.so')],
    %w[hip hip libamdhip64] + [File.join(PKGLIBDIR,'hip', 'libamdhip64.so')],
