--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -140,7 +140,7 @@ then
 else
   export LD_LIBRARY_PATH=$pkglibdir/opencl:$LD_LIBRARY_PATH
 fi
-export LD_PRELOAD=$libdir/libTracerOpenCL.so:$LD_PRELOAD
+export LD_PRELOAD=$pkglibdir/opencl/libOpenCL.so:$LD_PRELOAD
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LTTNG_UST_OPENCL_VERBOSE=1
 lttng start
