--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -120,7 +120,7 @@ then
 else
   export LD_LIBRARY_PATH=$pkglibdir/cuda:$LD_LIBRARY_PATH
 fi
-export LD_PRELOAD=$libdir/libTracerCUDA.so:$LD_PRELOAD
+export LD_PRELOAD=$pkglibdir/cuda/libcuda.so:$LD_PRELOAD
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LTTNG_UST_CUDA_VERBOSE=1
 if [ ! -z "$cudart" ]
@@ -136,7 +136,7 @@ then
   else
     export LD_LIBRARY_PATH=$pkglibdir/cudart:$LD_LIBRARY_PATH
   fi
-  export LD_PRELOAD=$libdir/libTracerCUDART.so:$LD_PRELOAD
+  export LD_PRELOAD=$pkglibdir/cudart/libcudart.so:$LD_PRELOAD
   export LTTNG_UST_CUDART_VERBOSE=1
 fi
 lttng start
